<resources>
    <string name="app_name">慧农场</string>
    <string name="control">控制</string>
    <string name="monitor">监测</string>
    <string name="work">工作</string>
    <string name="mine">我的</string>
    <string name="curr_state">当前状态:</string>
    <string name="turn_on">开</string>
    <string name="turn_off">关</string>
    <string name="del">删除</string>
    <string name="real_time_monitoring">实时监测</string>
    <string name="real_time_recording">实时监控</string>
    <string name="data_statistics">数据统计</string>
    <string name="last_day">最近24小时</string>
    <string name="last_weekend">最近一周</string>
    <string name="last_month">最近一个月</string>
    <string name="person_info">个人信息</string>
    <string name="login_account">登录账号</string>
    <string name="user_name">用户昵称</string>
    <string name="save">保存</string>
    <string name="bind_phone">绑定手机</string>
    <string name="change_bind_phone">更换绑定手机</string>
    <string name="phone_number">手机号 :</string>
    <string name="enter_phone_number_please">请输入手机号</string>
    <string name="verify_number">验证码 :</string>
    <string name="enter_verify_number_please">请输入验证码</string>
    <string name="get_verify_number">获取验证码</string>
    <string name="change_password">修改密码</string>
    <string name="enter_curr_password">输入原密码:</string>
    <string name="enter_curr_password_please">请输入原密码</string>
    <string name="enter_new_password">输入新密码:</string>
    <string name="enter_new_password_please">请输入新密码</string>
    <string name="confirm_new_password">确认新密码:</string>
    <string name="enter_new_password_again_please">请再次输入新密码</string>
    <string name="about_us">关于我们</string>
    <string name="curr_version">当前版本</string>
    <string name="update_version">新版更新</string>
    <string name="curr_version_is_latest">当前为最新版本</string>
    <string name="copyright_message">丰博科技 版权所有</string>
    <string name="your_bind_phone_number_is">您绑定的手机号是 ： \n</string>
    <string name="you_are_not_bind_phone_number">您还未绑定手机\n绑定手机后可用于找回密码</string>
    <string name="message_list">消息列表</string>
    <string name="clear_record">清除记录</string>
    <string name="clear">清除</string>
    <string name="confirm">确认</string>
    <string name="warning_message">报警信息</string>
    <string name="check_all">全选</string>
    <string name="handle">处理</string>
    <string name="content">内容</string>
    <string name="advice">建议</string>
    <string name="warning_date">告警时间</string>
    <string name="place_name">场地名称</string>
    <string name="warning_hardware">报警设备</string>
    <string name="warning_state">报警状态</string>
    <string name="hint_message">该报警是否已处理</string>
    <string name="cancel">取消</string>
    <string name="exit_login">退出登录</string>
    <string name="manager_place">管理场地</string>
    <string name="air_humidity">空气温度</string>
    <string name="air_tp">空气湿度</string>
    <string name="soil_tp">土壤温度</string>
    <string name="soil_humidity">土壤湿度</string>
    <string name="co2">CO2浓度</string>
    <string name="rainfall">雨量</string>
    <string name="wind">风速</string>
    <string name="sunshine">光照强度</string>
    <string name="work_time">工作时间</string>
    <string name="place_choose">场地选择</string>
    <string name="crop_choose">农作物选择</string>
    <string name="work_type">工作类型</string>
    <string name="manure_type">肥料</string>
    <string name="dosage">用量</string>
    <string name="residual">残留</string>
    <string name="photo">图片</string>


</resources>
