<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.fb.smartfarm.view.CustomView.MineItem
        android:id="@+id/mine_bind"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        custom:mine_left_text="@string/bind_phone"
        custom:mine_right_text=""></com.fb.smartfarm.view.CustomView.MineItem>

    <include layout="@layout/layout_line_h" />

    <com.fb.smartfarm.view.CustomView.MineItem
        android:id="@+id/mine_change_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        custom:mine_left_text="@string/change_password"
        custom:mine_right_text=""></com.fb.smartfarm.view.CustomView.MineItem>

    <include layout="@layout/layout_line_h" />

    <com.fb.smartfarm.view.CustomView.MineItem
        android:id="@+id/mine_about_us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        custom:mine_left_text="@string/about_us"
        custom:mine_right_text=""></com.fb.smartfarm.view.CustomView.MineItem>

    <include layout="@layout/layout_line_h" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <include layout="@layout/layout_line_h" />

        <com.fb.smartfarm.view.CustomView.MineItem
            android:id="@+id/mine_exit_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            custom:mine_left_text="@string/exit_login"
            custom:mine_right_text=""></com.fb.smartfarm.view.CustomView.MineItem>

        <include layout="@layout/layout_line_h" />
    </LinearLayout>


</LinearLayout>
