<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.fb.smartfarm.view.CustomView.MineItem
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        custom:mine_left_text="@string/login_account"
        android:id="@+id/user_account"
        android:layout_width="match_parent"
        android:layout_height="32dp"></com.fb.smartfarm.view.CustomView.MineItem>
    <include layout="@layout/layout_line_h"/>
    <com.fb.smartfarm.view.CustomView.MineItem
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        custom:mine_left_text="@string/user_name"
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="32dp"></com.fb.smartfarm.view.CustomView.MineItem>
    <include layout="@layout/layout_line_h"/>
    <com.fb.smartfarm.view.CustomView.MineItem
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        custom:mine_left_text="@string/manager_place"
        android:id="@+id/user_manager_place"
        android:layout_width="match_parent"
        android:layout_height="32dp"></com.fb.smartfarm.view.CustomView.MineItem>
    <include layout="@layout/layout_line_h"/>
    <ListView
        android:id="@+id/user_place_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></ListView>
</LinearLayout>
