<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="120dp"
            android:textColor="@color/title_txt"
            android:textSize="10sp"
            android:text="@string/enter_curr_password"
            android:layout_height="32dp" />
        <EditText
            android:paddingStart="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/curr_password"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/insert_tex_line"
            android:cursorVisible="false"
            android:textSize="10sp"
            android:textColor="@color/data_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_curr_password_please"
            android:textColorHint="@color/hint_txt"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="120dp"
            android:textColor="@color/title_txt"
            android:textSize="10sp"
            android:text="@string/enter_new_password"
            android:layout_height="40dp" />
        <EditText
            android:paddingStart="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/new_password"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/insert_tex_line"
            android:cursorVisible="false"
            android:textSize="10sp"
            android:textColor="@color/data_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_new_password_please"
            android:textColorHint="@color/hint_txt"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="120dp"
            android:textColor="@color/title_txt"
            android:textSize="10sp"
            android:text="@string/confirm_new_password"
            android:layout_height="40dp" />
        <EditText
            android:paddingStart="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/confirm_new_password"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/insert_tex_line"
            android:cursorVisible="false"
            android:textSize="10sp"
            android:textColor="@color/data_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_new_password_again_please"
            android:textColorHint="@color/hint_txt"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            />
    </LinearLayout>
</LinearLayout>
