<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_line"
    android:orientation="vertical">
       <TextView
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="30dp"
           android:textSize="18sp"
           android:textColor="@color/black"
           android:text="@string/hint_message"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1">
           <TextView
               android:id="@+id/btn_msg_cancel"
               android:gravity="center"
               android:textColor="@color/black"
               android:text="@string/cancel"
               android:layout_alignParentBottom="true"
               android:layout_alignParentStart="true"
               android:layout_marginBottom="20dp"
               android:layout_marginStart="30dp"
               android:background="@color/btn_bg"
               android:layout_width="100dp"
               android:layout_height="50dp" />
           <TextView
               android:id="@+id/btn_msg_confirm"
               android:gravity="center"
               android:text="@string/confirm"
               android:layout_alignParentBottom="true"
               android:layout_alignParentEnd="true"
               android:layout_marginBottom="20dp"
               android:layout_marginEnd="30dp"
               android:background="@color/green"
               android:layout_width="100dp"
               android:layout_height="50dp" />
       </RelativeLayout>
</LinearLayout>
