<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:weightSum="4">

    <include layout="@layout/layout_line_h" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_monitor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/tv_bottom_monitor"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/monitor"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_control"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/tv_bottom_control"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/control"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_work"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/tv_bottom_work"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/work"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_mine"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/tv_bottom_mine"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/mine"
                android:textSize="8sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
